# vpc3-proyecto

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: __init__.py  base.py  donut.py  trocr.py
models/finetuned_donut_weights/checkpoint-10873/without_cropping/: metrics.json  (+1 more)
models/finetuned_trocr_weights/: config.json  generation_config.json
notebooks/: 1.0-aq-data-processing.ipynb  donut_fine_tuning.ipynb  preparacion_dataset_coco.ipynb  prueba_trocr_finetuned_final.ipynb  trocr_evaluation.ipynb  trocr_finetune.ipynb
results/evaluation/donut-base/: evaluation_config.json  evaluation_report.txt  predictions.csv
results/evaluation/donut-eval/: evaluation_config.json  evaluation_report.txt  metrics.json  predictions.csv
results/evaluation/donut-eval2/: evaluation_config.json  evaluation_report.txt  metrics.json  predictions.csv
scripts/: README.md  __init__.py  attention_viz.py  eval_model.py  infer.py  train.py  utils.py
vpc3-proyecto/: eda.py  informe_vpc3.tex  visualizations.py
vpc3_proyecto/: model_utils.py
vpc3_proyecto/data/: bigger_detection_selection.ipynb  dataset.py  dataset_split.ipynb  dataset_split.py  image_cropping.ipynb  utils.py
vpc3_proyecto/model_evaluation/: donut_evaluation.ipynb  utils.py
vpc3_proyecto/model_training/: dataset_donut_model.py  donut_fine_tuning.ipynb
vpc3_proyecto/visualization/: donut_attention_visualization.ipynb  infer_from_image.py  load_and_compare_metrics.ipynb  load_and_plot_metrics_utils.py  test_image_infer.ipynb
(+16 files in other folders)
