[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vpc3-proyecto"
version = "0.0.1"
description = "Trabajo Final Vision por Computadora III"
authors = [
  { name = "A. Quiros" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["vpc3-proyecto"]
include = ["pyproject.toml", "vpc3-proyecto/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["vpc3-proyecto"]
force-sort-within-sections = true

